# CS510-password-manager-

./: Cargo.toml  LICENSE  README.md
resources/: test.json
src/: common.rs  create.rs  data_model.rs  delete.rs  errors.rs  get.rs  init.rs  main.rs
src/generic/: common.rs  encryption.rs  errors.rs
src/mocks/: test_mocks.rs
src/models/: data_model.rs
src/operations/: create.rs  delete.rs  get.rs  init.rs  list.rs  mod.rs  modify.rs
