[package]
name = "password_manager"
version = "0.1.0"
authors = ["Tareq Jallad", "Haohan Jiang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
home = "0.5.3"
rpassword = "5.0"
text_io = "0.1.8"
serde_json = "1.0"
crypto_box = "0.6.0"
rand_core = "0.6.2"
rand = "0.8.0"
thiserror = "1.0.24"
clap = "3.0.0-beta.2"